--- a/src/front-end/public/index.html
+++ b/src/front-end/public/index.html
@@ -8,7 +8,8 @@
       name="description"
       content="Newt app"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="./manifest.json" />
+    <link rel="shortcut icon" type="image/png" href="./favicon.ico">
     <title>Newt</title>
   </head>
   <body>
